--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,76 @@
 @import url(reset.css);
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.hero{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div #bg-hero img{
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    transition: all 0.6s ease-in-out;
+}
+
+#pomodoro{
+
+    border-radius: 14px;
+    position: relative;
+
+    width: 100%;
+    max-width: 180px;
+
+    margin: 0 auto;
+    padding: 15px 15px 25px 30px;
+    top: 65vh;
+
+    background: rgba(255, 255, 255, 0.29);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.64);
+}
+
+#i-pomodoro-overlay{
+
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    border-radius: 14px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease-in-out;
+}
+
+body.page-loaded #i-pomodoro-overlay{
+    opacity: 0;
+    visibility: hidden;
+}
+
+#i-pomodoro-overlay img{
+    width: 28px;
+    height: 28px;
+}
