--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ div #bg-hero img{
 
     
     width: 100%;
-    height: 100%;
+    height: 95%;
 
     position: absolute;
     transition: all 0.3s ease-in-out;
@@ -41,11 +41,13 @@ div #bg-hero img{
     position: relative;
 
     width: 100%;
-    max-width: 180px;
+    max-width: 350px;
+    height: 485px;
+    
 
     margin: 0 auto;
     padding: 25px 30px 25px 30px;
-    top: 65vh;
+    top: 45vh;
 
     background: rgba(255, 255, 255, 0.29);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -180,6 +182,70 @@ body.page-loaded #i-pomodoro-overlay{
     position: relative;
     height: 90px;
 }
+
+    /*Configurações*/
+    #i-timer-settings{
+        opacity: 0;
+        transition: var(--transition-lead);
+        visibility: hidden;
+       
+        
+    }
+
+        #i-close-settings{
+            top: -45px;
+            height: 88px;
+            background: #d85e3a;
+            color: #f7ddd7;
+        }
+
+        #i-close-settings:hover{
+            color: black;
+        }
+
+        #element-timer-form{
+            border-radius: 20px;
+            position: absolute;
+            bottom: 10;
+            left: 0;
+            width: auto;
+           
+            background: #d85e3a;
+            padding: 15px;
+            z-index: 1;
+        }
+
+            .element-timer-line{
+                display: flex;
+            }
+            .element-timer-line:last-child{
+                margin-top: 20px;
+            }
+
+            .element-timer-line label{
+                width: 50%;
+                color: #5c5c5c;
+                padding: 10px 0 10px 0;
+            }
+
+            .element-timer-line input{
+                width: 20%;
+                color: #5c5c5c;
+                background: #fff;
+                margin-left:  -2px;
+                border-radius: 10px;
+                border: 0 none;
+                text-align: center;
+            }
+
+            #element-timer-form input::-webkit-inner-spin-button,
+            #element-timer-form input::-webkit-outer-spin-button{
+                -webkit-appearance: none;
+            }
+
+            #element-timer-form input[type=number] {
+                -moz-appearance: textfield;
+            }
 
     /*Play e Pausa - Buttons*/
 
