--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url(reset.css);
+@import url(header.css);
 
 :root{
     --transition-lead: all 0.3s ease-in-out;
@@ -18,6 +19,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 div #bg-hero img{
@@ -28,7 +30,7 @@ div #bg-hero img{
 
     
     width: 100%;
-    height: 95%;
+    height: 90%;
 
     position: absolute;
     transition: all 0.3s ease-in-out;
@@ -147,6 +149,17 @@ body.page-loaded #i-pomodoro-overlay{
                 fill: #5c5c5c;
                 
             }
+
+body.settings-active #i-timer-settings {
+    opacity: 1;
+    visibility: visible;
+}
+
+body.settings-active #i-timer-sessions,
+body.settings-active #i-timer-buttons {
+    opacity: 0;
+    visibility: hidden;
+}
 
 /* Timer-sessions-div*/
 
@@ -272,3 +285,104 @@ body.page-loaded #i-pomodoro-overlay{
         border-radius: 100px;
 
     }
+    
+    body.timer-runnig #start-btn{
+
+        opacity: 0;
+        visibility: hidden;
+    }
+    body.timer-paused #start-btn{
+
+        opacity: 0;
+        visibility: visible;
+    }
+
+    /*Timer inner text*/
+
+    body.timer-paused:not(.rest-mode){
+
+    }
+
+
+    /* Section - About */
+
+    .sectionPomodoro{
+        background-color: #222;
+        color: #fff;
+        position: relative;
+        font-size: 18px;
+        width: 100%;
+        height: 45%;
+        z-index: 2;
+    }
+
+    .linksArtigos ul{
+        list-style: none;
+        font-style: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .abt-Pomodoro{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        margin: 20px;
+        padding: 10px;
+        
+    }
+
+
+    .abt-Pomodoro__intro:nth-child(2){
+        font-size: 1.2em;
+        font-style: italic;
+    }
+
+    .abt-Pomodoro__intro span{
+        position: relative;
+        font-style: normal;
+        top:5px;
+        font-size: 0.70em
+    }
+
+    .abt-Pomodoro__text{
+        position: relative;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        flex-direction: column;
+        font-size: .95em;
+
+        width: 100%;
+        max-width: 85%;
+
+        bottom: 10px;
+        padding: 10px;
+        gap: 4px;
+        text-align: justify;
+        left: 20px;
+        line-break: auto;
+    }
+    .abt-txt:nth-child(1){
+        position: relative;
+        font-size: 18px;
+        margin-bottom: 10px;
+        text-align:start;
+        
+        
+    }
+    .abt-txt:nth-child(2){
+        
+        position: relative;
+        font-size: 17px;
+        font-weight: 300;
+        text-wrap: wrap;
+        margin-right: 10px;
+        line-height: 25px;
+    }
+
+    
+
