--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,16 @@
 @import url(reset.css);
 @import url(header.css);
+@import url(sectionPomodoro.css);
+@import url(pomodoro-function.css);
+@import url(grupo.css);
+@import url(footer.css);
+
 
 :root{
     --transition-lead: all 0.3s ease-in-out;
     --border-radius: 14px;
+
+    --bg-color: #E0786C;
 }
 
 body{
@@ -13,376 +20,10 @@ body{
     align-items: center;*/
     height: 100%;
     box-sizing: border-box;
-}
-
-.hero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: var(--bg-color);
+    color: #DCF2F0;
+    border-radius: 4px;
+    overflow-x: hidden;
     
 }
-
-div #bg-hero img{
-
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    
-    width: 100%;
-    height: 90%;
-
-    position: absolute;
-    transition: all 0.3s ease-in-out;
-}
-/* Pomodoro-div*/
-
-#pomodoro{
-
-    border-radius: 14px;
-    position: relative;
-
-    width: 100%;
-    max-width: 350px;
-    height: 485px;
-    
-
-    margin: 0 auto;
-    padding: 25px 30px 25px 30px;
-    top: 45vh;
-
-    background: rgba(255, 255, 255, 0.29);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.5px);
-    -webkit-backdrop-filter: blur(6.5px);
-    border: 1px solid rgba(255, 255, 255, 0.64);
-}
-
-/*** Overlay-div ***/
-
-#i-pomodoro-overlay{
-
-    background: #fff;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-
-    border-radius: 14px;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease-in-out;
-}
-
-body.page-loaded #i-pomodoro-overlay{
-    opacity: 0;
-    visibility: hidden;
-}
-
-#i-pomodoro-overlay img{
-    width: 28px;
-    height: 28px;
-}
-
-/*** Generic button + toggle button ***/
-
-.btn-icon{
-    border-radius: 14px;
-    position: absolute;
-    right: 0;
-    width: 24px;
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-
-}
-
-#btn-iConfig{
-    color: black;
-    position: relative;
-    top: -15px;
-    right: 20px;
-    height: 50px;
-    font-size: 20px;
-}
-
-    /* Progress*/
-
-#i-timer-progress{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
-}
-    .svg-icon-Circle{
-        width: 250px;
-        height: 250px;
-    }
-        .circle-background{
-            stroke: white;
-            stroke-width: 7;
-            fill: none;
-        }
-
-        .circle-progress{
-            stroke: red;
-            stroke-width: 7;
-            stroke-linecap: round;
-            stroke-dasharray: 283;
-            fill: none;
-            transform-origin: 50% 50%;
-            transform: rotate(-90deg);
-        }
-
-        #i-timer-time{
-            fill: #5c5c5c;
-        }
-
-            #i-timer-pause,
-            #i-timer-rest {
-                opacity: 0;
-                transition: var(--transition-lead);
-                fill: #5c5c5c;
-                
-            }
-
-body.settings-active #i-timer-settings {
-    opacity: 1;
-    visibility: visible;
-}
-
-body.settings-active #i-timer-sessions,
-body.settings-active #i-timer-buttons {
-    opacity: 0;
-    visibility: hidden;
-}
-
-/* Timer-sessions-div*/
-
-#i-timer-sessions{
-    border-radius: 50px;
-    background-color: #fff;
-    display: flex;
-    color: #5c5c5cb8;
-    align-items: center;
-    transition: var(--transition-lead);
-}
-
-    #i-timer-sessions p{
-        padding: 15px;
-        font-size: 12px;
-}
-
-    #timer-completed-label{
-        width: 90%;
-        text-align: center;
-    }
-
-    p#timer-completed-sessions{
-        font-weight: bold;
-        color: #222;
-        font-size: 20px;
-        }
-
-/*Functions no CSS*/
-
-#i-timer-functions{
-    border: 1px solid red;
-    position: relative;
-    height: 90px;
-}
-
-    /*Configurações*/
-    #i-timer-settings{
-        opacity: 0;
-        transition: var(--transition-lead);
-        visibility: hidden;
-       
-        
-    }
-
-        #i-close-settings{
-            top: -45px;
-            height: 88px;
-            background: #d85e3a;
-            color: #f7ddd7;
-        }
-
-        #i-close-settings:hover{
-            color: black;
-        }
-
-        #element-timer-form{
-            border-radius: 20px;
-            position: absolute;
-            bottom: 10;
-            left: 0;
-            width: auto;
-           
-            background: #d85e3a;
-            padding: 15px;
-            z-index: 1;
-        }
-
-            .element-timer-line{
-                display: flex;
-            }
-            .element-timer-line:last-child{
-                margin-top: 20px;
-            }
-
-            .element-timer-line label{
-                width: 50%;
-                color: #5c5c5c;
-                padding: 10px 0 10px 0;
-            }
-
-            .element-timer-line input{
-                width: 20%;
-                color: #5c5c5c;
-                background: #fff;
-                margin-left:  -2px;
-                border-radius: 10px;
-                border: 0 none;
-                text-align: center;
-            }
-
-            #element-timer-form input::-webkit-inner-spin-button,
-            #element-timer-form input::-webkit-outer-spin-button{
-                -webkit-appearance: none;
-            }
-
-            #element-timer-form input[type=number] {
-                -moz-appearance: textfield;
-            }
-
-    /*Play e Pausa - Buttons*/
-
-    #i-timer-buttons{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        transition: var(--transition-lead);
-    }
-
-    #i-timer-buttons button{
-        background-color: red;
-        position: absolute;
-        border: 0px none;
-        cursor: pointer;
-        width: 60px;
-        height: 60px;
-        display: block;
-        font-size: 30px;
-        color: #fff;
-        border-radius: 100px;
-
-    }
-    
-    body.timer-runnig #start-btn{
-
-        opacity: 0;
-        visibility: hidden;
-    }
-    body.timer-paused #start-btn{
-
-        opacity: 0;
-        visibility: visible;
-    }
-
-    /*Timer inner text*/
-
-    body.timer-paused:not(.rest-mode){
-
-    }
-
-
-    /* Section - About */
-
-    .sectionPomodoro{
-        background-color: #222;
-        color: #fff;
-        position: relative;
-        font-size: 18px;
-        width: 100%;
-        height: 45%;
-        z-index: 2;
-    }
-
-    .linksArtigos ul{
-        list-style: none;
-        font-style: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: start;
-    }
-
-    .abt-Pomodoro{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        margin: 20px;
-        padding: 10px;
-        
-    }
-
-
-    .abt-Pomodoro__intro:nth-child(2){
-        font-size: 1.2em;
-        font-style: italic;
-    }
-
-    .abt-Pomodoro__intro span{
-        position: relative;
-        font-style: normal;
-        top:5px;
-        font-size: 0.70em
-    }
-
-    .abt-Pomodoro__text{
-        position: relative;
-        display: flex;
-        text-align: center;
-        justify-content: center;
-        flex-direction: column;
-        font-size: .95em;
-
-        width: 100%;
-        max-width: 85%;
-
-        bottom: 10px;
-        padding: 10px;
-        gap: 4px;
-        text-align: justify;
-        left: 20px;
-        line-break: auto;
-    }
-    .abt-txt:nth-child(1){
-        position: relative;
-        font-size: 18px;
-        margin-bottom: 10px;
-        text-align:start;
-        
-        
-    }
-    .abt-txt:nth-child(2){
-        
-        position: relative;
-        font-size: 17px;
-        font-weight: 300;
-        text-wrap: wrap;
-        margin-right: 10px;
-        line-height: 25px;
-    }
-
-    
 
